# codek7-backend

./: .env.docker  .gitignore  README.md  docker-compose.yaml  index.html  videojs-http-source-selector.min.js
common/: Makefile  go.mod
common/pb/: repo.proto
gateway/: .env  .env.docker  Dockerfile  Makefile  Makefile.bak  docker-compose.yml  go.mod  go.sum
gateway/cmd/: main.go
gateway/internal/api/: api.go  auth.go  health.go  stream.go  upload.go  videos.go  websocket.go
gateway/internal/infra/: grpc.go  kafka.go  minio.go  redis.go  rmq.go
gateway/internal/middlewares/: auth.go  rate_limiter.go
gateway/internal/server/: server.go
gateway/internal/watcher/: hub.go  notification.go  sender.go  watcher.go  websocket.go
gateway/pkg/utils/: ctx.go  jwt.go
nsfw/: .gitignore  NSFW_README.md  README.md  app.py  generate_proto.sh  repo_pb2.py  repo_pb2_grpc.py  requirements.txt  utils.py
repo/: .env  .env.docker  .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
repo/cmd/: main.go
repo/db/migrations/: 20250629203230_create_users_table.sql  20250629203343_seed_data.sql  20250629203851_create_videos_table.sql  20250630222545_create_videos_table.sql  20250701064810_add_password_username_user_table.sql  20250701071427_seed_users.sql  20250701211937_create_api_key_table.sql
repo/internal/handler/: handler.go
repo/internal/model/: user.go  video.go
vcodec/: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  main.cpp
vcodec/src/: consts.rs  kafka.rs  main.rs  processor.rs  rmq.rs  rpc.rs  video.rs
(+8 files in other folders)
